#228 Implemented (#244)
* #228 Implemented
* updated dependencies
* #230 improved user_guide.md regarding command line parameters and credentials file
* #238 warn on missing credentials file
* Implemented #231 configure language in config file